[gd_scene load_steps=7 format=3 uid="uid://0ysd2u5hcwjf"]

[ext_resource type="Script" path="res://scripts/player/Player.gd" id="1_7850m"]
[ext_resource type="SpriteFrames" uid="uid://blro1j2a07hbj" path="res://resources/player/player_sprite_frames.tres" id="1_x0c5y"]
[ext_resource type="PackedScene" uid="uid://37j1d4jjisg" path="res://scenes/player/weapons/WeaponSystem.tscn" id="2_iayjf"]
[ext_resource type="PackedScene" uid="uid://dbgcibgcw7ty0" path="res://scenes/player/zoomCamera.tscn" id="4_f38ed"]

[sub_resource type="CircleShape2D" id="CircleShape2D_8vcw0"]
radius = 61.131

[sub_resource type="CircleShape2D" id="CircleShape2D_xjjbl"]
radius = 1016.03

[node name="Player" type="CharacterBody2D"]
scale = Vector2(0.25, 0.25)
script = ExtResource("1_7850m")

[node name="CharacterSprite" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("1_x0c5y")
animation = &"Walk"
frame_progress = 0.378499

[node name="HitBox" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_8vcw0")

[node name="WeaponSystem" parent="." instance=ExtResource("2_iayjf")]
unique_name_in_owner = true

[node name="ZoomCamera" parent="." instance=ExtResource("4_f38ed")]
unique_name_in_owner = true
zoom_speed = 5

[node name="Vision" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2(1, 8)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Vision"]
position = Vector2(691, 104)
shape = SubResource("CircleShape2D_xjjbl")

[node name="Muzzle" type="RayCast2D" parent="."]
unique_name_in_owner = true
target_position = Vector2(2500, 0)

[connection signal="player_started_moving" from="." to="WeaponSystem" method="_on_player_player_started_moving"]
[connection signal="player_started_sprinting" from="." to="WeaponSystem" method="_on_player_player_started_sprinting"]
[connection signal="player_stopped_moving" from="." to="WeaponSystem" method="_on_player_player_stopped_moving"]
[connection signal="player_stopped_sprinting" from="." to="WeaponSystem" method="_on_player_player_stopped_sprinting"]
[connection signal="body_shape_exited" from="Vision" to="." method="_on_vision_body_shape_exited"]
